apps/production/gateway/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-istio
  namespace: harrytang-prod
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: gateway
  annotations:
    cert-manager.io/issuer: letsencrypt
    networking.istio.io/service-type: NodePort
spec:
  ports:
    - name: status-port
      protocol: TCP
      appProtocol: tcp
      port: 15021
      targetPort: 15021
    - protocol: TCP
      appProtocol: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - protocol: TCP
      appProtocol: https
      port: 443
      targetPort: 443
      nodePort: 30443
  selector:
    gateway.networking.k8s.io/gateway-name: gateway
  type: NodePort
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: harrytang-prod
  annotations:
    networking.istio.io/service-type: NodePort
    cert-manager.io/issuer: letsencrypt
spec:
  gatewayClassName: istio
  listeners:
    - name: headless-http
      hostname: headless.harrytang.xyz
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: headless-https
      hostname: headless.harrytang.xyz
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: headless-tls
